--- a/.github/workflows/healthReport.yml
+++ b/.github/workflows/healthReport.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   start:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-20.04
     strategy:
       matrix:
         python-version: [3.7]
@@ -31,4 +31,5 @@ jobs:
         run: |
           sudo cp -p ./chrome/chromedriver /usr/bin/
           sudo chmod -R 777 /usr/bin/chromedriver
-          python health_report_helper/main.py "${{ secrets.DATA }}"
+          # python health_report_helper/main.py "${{ secrets.DATA }}"
+          python health_report_helper/health-record.py
