--- a/.github/workflows/healthReport.yml
+++ b/.github/workflows/healthReport.yml
@@ -32,4 +32,4 @@ jobs:
           sudo cp -p ./chrome/chromedriver /usr/bin/
           sudo chmod -R 777 /usr/bin/chromedriver
           # python health_report_helper/main.py "${{ secrets.DATA }}"
-          python health_report_helper/health-record.py
+          python health_report_helper/health-record.py "${{ secrets.DATA }}"
