--- a/.github/workflows/healthReport.yml
+++ b/.github/workflows/healthReport.yml
@@ -31,5 +31,4 @@ jobs:
         run: |
           sudo cp -p ./chrome/chromedriver /usr/bin/
           sudo chmod -R 777 /usr/bin/chromedriver
-          # python health_report_helper/main.py "${{ secrets.DATA }}"
-          python health_report_helper/health-record.py "${{ secrets.DATA }}"
+          python health_report_helper/health-record.py
