--- a/.github/workflows/healthReport.yml
+++ b/.github/workflows/healthReport.yml
@@ -5,7 +5,7 @@ on:
 #    branches:
 #      - master
   schedule:
-    - cron: '0 22,11 * * *' # GMT+8 17:00, 19:00
+    - cron: '* */2 * * *' # GMT+8 17:00, 19:00
   workflow_dispatch: # add manually button
 
 jobs:
